--- a/projects/pubg/client/package.json
+++ b/projects/pubg/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practice-project",
+  "name": "client",
   "version": "0.1.0",
   "description": "",
   "scripts": {
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   },
